# name: TestInsight.test_insights_does_not_nplus1.1
  '
  SELECT "posthog_team"."id",
         "posthog_team"."uuid",
         "posthog_team"."organization_id",
         "posthog_team"."api_token",
         "posthog_team"."app_urls",
         "posthog_team"."name",
         "posthog_team"."slack_incoming_webhook",
         "posthog_team"."created_at",
         "posthog_team"."updated_at",
         "posthog_team"."anonymize_ips",
         "posthog_team"."completed_snippet_onboarding",
         "posthog_team"."ingested_event",
         "posthog_team"."session_recording_opt_in",
         "posthog_team"."signup_token",
         "posthog_team"."is_demo",
         "posthog_team"."access_control",
         "posthog_team"."test_account_filters",
         "posthog_team"."path_cleaning_filters",
         "posthog_team"."timezone",
         "posthog_team"."data_attributes",
         "posthog_team"."correlation_config",
         "posthog_team"."session_recording_retention_period_days",
         "posthog_team"."plugins_opt_in",
         "posthog_team"."opt_out_capture",
         "posthog_team"."event_names",
         "posthog_team"."event_names_with_usage",
         "posthog_team"."event_properties",
         "posthog_team"."event_properties_with_usage",
         "posthog_team"."event_properties_numerical"
  FROM "posthog_team"
  WHERE "posthog_team"."id" = 2
  LIMIT 21
  '
---
# name: TestInsight.test_insights_does_not_nplus1.10
  '
  SELECT "posthog_enterprisetaggeditem"."tag"
  FROM "posthog_enterprisetaggeditem"
  WHERE ("posthog_enterprisetaggeditem"."content_type_id" = 2
         AND "posthog_enterprisetaggeditem"."object_id" = '2')
  '
---
# name: TestInsight.test_insights_does_not_nplus1.11
  '
  SELECT "posthog_enterprisetaggeditem"."tag"
  FROM "posthog_enterprisetaggeditem"
  WHERE ("posthog_enterprisetaggeditem"."content_type_id" = 2
         AND "posthog_enterprisetaggeditem"."object_id" = '11')
  '
---
# name: TestInsight.test_insights_does_not_nplus1.12
  '
  SELECT "posthog_enterprisetaggeditem"."tag"
  FROM "posthog_enterprisetaggeditem"
  WHERE ("posthog_enterprisetaggeditem"."content_type_id" = 2
         AND "posthog_enterprisetaggeditem"."object_id" = '12')
  '
---
# name: TestInsight.test_insights_does_not_nplus1.13
  '
  SELECT "posthog_enterprisetaggeditem"."tag"
  FROM "posthog_enterprisetaggeditem"
  WHERE ("posthog_enterprisetaggeditem"."content_type_id" = 2
         AND "posthog_enterprisetaggeditem"."object_id" = '13')
  '
---
# name: TestInsight.test_insights_does_not_nplus1.14
  '
  SELECT "posthog_enterprisetaggeditem"."tag"
  FROM "posthog_enterprisetaggeditem"
  WHERE ("posthog_enterprisetaggeditem"."content_type_id" = 2
         AND "posthog_enterprisetaggeditem"."object_id" = '14')
  '
---
# name: TestInsight.test_insights_does_not_nplus1.15
  '
  SELECT "posthog_enterprisetaggeditem"."tag"
  FROM "posthog_enterprisetaggeditem"
  WHERE ("posthog_enterprisetaggeditem"."content_type_id" = 2
         AND "posthog_enterprisetaggeditem"."object_id" = '15')
  '
---
# name: TestInsight.test_insights_does_not_nplus1.16
  '
  SELECT "posthog_enterprisetaggeditem"."tag"
  FROM "posthog_enterprisetaggeditem"
  WHERE ("posthog_enterprisetaggeditem"."content_type_id" = 2
         AND "posthog_enterprisetaggeditem"."object_id" = '16')
  '
---
# name: TestInsight.test_insights_does_not_nplus1.17
  '
  SELECT "posthog_enterprisetaggeditem"."tag"
  FROM "posthog_enterprisetaggeditem"
  WHERE ("posthog_enterprisetaggeditem"."content_type_id" = 2
         AND "posthog_enterprisetaggeditem"."object_id" = '17')
  '
---
# name: TestInsight.test_insights_does_not_nplus1.18
  '
  SELECT "posthog_enterprisetaggeditem"."tag"
  FROM "posthog_enterprisetaggeditem"
  WHERE ("posthog_enterprisetaggeditem"."content_type_id" = 2
         AND "posthog_enterprisetaggeditem"."object_id" = '18')
  '
---
# name: TestInsight.test_insights_does_not_nplus1.19
  '
  SELECT "posthog_enterprisetaggeditem"."tag"
  FROM "posthog_enterprisetaggeditem"
  WHERE ("posthog_enterprisetaggeditem"."content_type_id" = 2
         AND "posthog_enterprisetaggeditem"."object_id" = '19')
  '
---
# name: TestInsight.test_insights_does_not_nplus1.2
  '
  SELECT "posthog_organizationmembership"."id",
         "posthog_organizationmembership"."organization_id",
         "posthog_organizationmembership"."user_id",
         "posthog_organizationmembership"."level",
         "posthog_organizationmembership"."joined_at",
         "posthog_organizationmembership"."updated_at",
         "posthog_organization"."id",
         "posthog_organization"."name",
         "posthog_organization"."slug",
         "posthog_organization"."created_at",
         "posthog_organization"."updated_at",
         "posthog_organization"."domain_whitelist",
         "posthog_organization"."setup_section_2_completed",
         "posthog_organization"."personalization",
         "posthog_organization"."plugins_access_level",
         "posthog_organization"."available_features",
         "posthog_organization"."for_internal_metrics",
         "posthog_organization"."is_member_join_email_enabled"
  FROM "posthog_organizationmembership"
  INNER JOIN "posthog_organization" ON ("posthog_organizationmembership"."organization_id" = "posthog_organization"."id")
  WHERE ("posthog_organizationmembership"."organization_id" = '00000000-0000-0000-0000-000000000000'::uuid
         AND "posthog_organizationmembership"."user_id" = 2)
  LIMIT 21
  '
---
# name: TestInsight.test_insights_does_not_nplus1.20
  '
  SELECT "posthog_enterprisetaggeditem"."tag"
  FROM "posthog_enterprisetaggeditem"
  WHERE ("posthog_enterprisetaggeditem"."content_type_id" = 2
         AND "posthog_enterprisetaggeditem"."object_id" = '20')
  '
---
# name: TestInsight.test_insights_does_not_nplus1.21
  '
  SELECT "posthog_enterprisetaggeditem"."tag"
  FROM "posthog_enterprisetaggeditem"
  WHERE ("posthog_enterprisetaggeditem"."content_type_id" = 2
         AND "posthog_enterprisetaggeditem"."object_id" = '3')
  '
---
# name: TestInsight.test_insights_does_not_nplus1.22
  '
  SELECT "posthog_enterprisetaggeditem"."tag"
  FROM "posthog_enterprisetaggeditem"
  WHERE ("posthog_enterprisetaggeditem"."content_type_id" = 2
         AND "posthog_enterprisetaggeditem"."object_id" = '4')
  '
---
# name: TestInsight.test_insights_does_not_nplus1.23
  '
  SELECT "posthog_enterprisetaggeditem"."tag"
  FROM "posthog_enterprisetaggeditem"
  WHERE ("posthog_enterprisetaggeditem"."content_type_id" = 2
         AND "posthog_enterprisetaggeditem"."object_id" = '5')
  '
---
# name: TestInsight.test_insights_does_not_nplus1.24
  '
  SELECT "posthog_enterprisetaggeditem"."tag"
  FROM "posthog_enterprisetaggeditem"
  WHERE ("posthog_enterprisetaggeditem"."content_type_id" = 2
         AND "posthog_enterprisetaggeditem"."object_id" = '6')
  '
---
# name: TestInsight.test_insights_does_not_nplus1.25
  '
  SELECT "posthog_enterprisetaggeditem"."tag"
  FROM "posthog_enterprisetaggeditem"
  WHERE ("posthog_enterprisetaggeditem"."content_type_id" = 2
         AND "posthog_enterprisetaggeditem"."object_id" = '7')
  '
---
# name: TestInsight.test_insights_does_not_nplus1.26
  '
  SELECT "posthog_enterprisetaggeditem"."tag"
  FROM "posthog_enterprisetaggeditem"
  WHERE ("posthog_enterprisetaggeditem"."content_type_id" = 2
         AND "posthog_enterprisetaggeditem"."object_id" = '8')
  '
---
# name: TestInsight.test_insights_does_not_nplus1.27
  '
  SELECT "posthog_enterprisetaggeditem"."tag"
  FROM "posthog_enterprisetaggeditem"
  WHERE ("posthog_enterprisetaggeditem"."content_type_id" = 2
         AND "posthog_enterprisetaggeditem"."object_id" = '9')
  '
---
# name: TestInsight.test_insights_does_not_nplus1.28
  '
  SELECT "posthog_enterprisetaggeditem"."tag"
  FROM "posthog_enterprisetaggeditem"
  WHERE ("posthog_enterprisetaggeditem"."content_type_id" = 2
         AND "posthog_enterprisetaggeditem"."object_id" = '10')
  '
---
# name: TestInsight.test_insights_does_not_nplus1.3
  '
  SELECT COUNT(*) AS "__count"
  FROM "posthog_dashboarditem"
  WHERE ("posthog_dashboarditem"."team_id" = 2
         AND NOT "posthog_dashboarditem"."deleted")
  '
---
# name: TestInsight.test_insights_does_not_nplus1.4
  '
  SELECT "posthog_dashboarditem"."id",
         "posthog_dashboarditem"."dashboard_id",
         "posthog_dashboarditem"."dive_dashboard_id",
         "posthog_dashboarditem"."name",
         "posthog_dashboarditem"."description",
         "posthog_dashboarditem"."team_id",
         "posthog_dashboarditem"."filters",
         "posthog_dashboarditem"."filters_hash",
         "posthog_dashboarditem"."order",
         "posthog_dashboarditem"."deleted",
         "posthog_dashboarditem"."saved",
         "posthog_dashboarditem"."created_at",
         "posthog_dashboarditem"."layouts",
         "posthog_dashboarditem"."color",
         "posthog_dashboarditem"."last_refresh",
         "posthog_dashboarditem"."refreshing",
         "posthog_dashboarditem"."created_by_id",
         "posthog_dashboarditem"."is_sample",
         "posthog_dashboarditem"."short_id",
         "posthog_dashboarditem"."favorited",
         "posthog_dashboarditem"."refresh_attempt",
         "posthog_dashboarditem"."last_modified_at",
         "posthog_dashboarditem"."last_modified_by_id",
         "posthog_dashboarditem"."updated_at"
  FROM "posthog_dashboarditem"
  WHERE ("posthog_dashboarditem"."team_id" = 2
         AND NOT "posthog_dashboarditem"."deleted")
  ORDER BY "posthog_dashboarditem"."order" ASC
  LIMIT 100
  '
---
# name: TestInsight.test_insights_does_not_nplus1.5
  '
  SELECT "posthog_dashboard"."id",
         "posthog_dashboard"."name",
         "posthog_dashboard"."description",
         "posthog_dashboard"."team_id",
         "posthog_dashboard"."pinned",
         "posthog_dashboard"."created_at",
         "posthog_dashboard"."created_by_id",
         "posthog_dashboard"."deleted",
         "posthog_dashboard"."share_token",
         "posthog_dashboard"."is_shared",
         "posthog_dashboard"."last_accessed_at",
         "posthog_dashboard"."filters",
         "posthog_dashboard"."creation_mode",
         "posthog_dashboard"."restriction_level",
  FROM "posthog_dashboard"
  WHERE "posthog_dashboard"."id" IN (1,
                                     2,
                                     3,
                                     4,
                                     5 /* ... */)
  '
---
# name: TestInsight.test_insights_does_not_nplus1.6
  '
  SELECT "posthog_team"."id",
         "posthog_team"."uuid",
         "posthog_team"."organization_id",
         "posthog_team"."api_token",
         "posthog_team"."app_urls",
         "posthog_team"."name",
         "posthog_team"."slack_incoming_webhook",
         "posthog_team"."created_at",
         "posthog_team"."updated_at",
         "posthog_team"."anonymize_ips",
         "posthog_team"."completed_snippet_onboarding",
         "posthog_team"."ingested_event",
         "posthog_team"."session_recording_opt_in",
         "posthog_team"."signup_token",
         "posthog_team"."is_demo",
         "posthog_team"."access_control",
         "posthog_team"."test_account_filters",
         "posthog_team"."path_cleaning_filters",
         "posthog_team"."timezone",
         "posthog_team"."data_attributes",
         "posthog_team"."correlation_config",
         "posthog_team"."session_recording_retention_period_days",
         "posthog_team"."plugins_opt_in",
         "posthog_team"."opt_out_capture",
         "posthog_team"."event_names",
         "posthog_team"."event_names_with_usage",
         "posthog_team"."event_properties",
         "posthog_team"."event_properties_with_usage",
         "posthog_team"."event_properties_numerical"
  FROM "posthog_team"
  WHERE "posthog_team"."id" IN (1,
                                2,
                                3,
                                4,
                                5 /* ... */)
  '
---
# name: TestInsight.test_insights_does_not_nplus1.7
  '
  SELECT "posthog_organization"."id",
         "posthog_organization"."name",
         "posthog_organization"."slug",
         "posthog_organization"."created_at",
         "posthog_organization"."updated_at",
         "posthog_organization"."domain_whitelist",
         "posthog_organization"."setup_section_2_completed",
         "posthog_organization"."personalization",
         "posthog_organization"."plugins_access_level",
         "posthog_organization"."available_features",
         "posthog_organization"."for_internal_metrics",
         "posthog_organization"."is_member_join_email_enabled"
  FROM "posthog_organization"
  WHERE "posthog_organization"."id" IN ('00000000-0000-0000-0000-000000000000'::uuid)
  '
---
# name: TestInsight.test_insights_does_not_nplus1.8
  '
  SELECT "posthog_user"."id",
         "posthog_user"."password",
         "posthog_user"."last_login",
         "posthog_user"."first_name",
         "posthog_user"."last_name",
         "posthog_user"."is_staff",
         "posthog_user"."is_active",
         "posthog_user"."date_joined",
         "posthog_user"."uuid",
         "posthog_user"."current_organization_id",
         "posthog_user"."current_team_id",
         "posthog_user"."email",
         "posthog_user"."temporary_token",
         "posthog_user"."distinct_id",
         "posthog_user"."email_opt_in",
         "posthog_user"."anonymize_data",
         "posthog_user"."toolbar_mode",
         "posthog_user"."events_column_config"
  FROM "posthog_user"
  WHERE "posthog_user"."id" IN (1,
                                2,
                                3,
                                4,
                                5 /* ... */)
  '
---
# name: TestInsight.test_insights_does_not_nplus1.7
  '
  SELECT "posthog_organization"."id",
         "posthog_organization"."name",
         "posthog_organization"."slug",
         "posthog_organization"."created_at",
         "posthog_organization"."updated_at",
         "posthog_organization"."domain_whitelist",
         "posthog_organization"."setup_section_2_completed",
         "posthog_organization"."personalization",
         "posthog_organization"."plugins_access_level",
         "posthog_organization"."available_features",
         "posthog_organization"."for_internal_metrics",
         "posthog_organization"."is_member_join_email_enabled"
  FROM "posthog_organization"
  WHERE "posthog_organization"."id" = '017ea964-42b9-0000-75a5-755406cb5525'::uuid
  LIMIT 21
  '
---
# name: TestInsight.test_insights_does_not_nplus1.8
  '
  SELECT "django_content_type"."id",
         "django_content_type"."app_label",
         "django_content_type"."model"
  FROM "django_content_type"
  WHERE ("django_content_type"."app_label" = 'posthog'
         AND "django_content_type"."model" = 'insight')
  LIMIT 21
  '
---
# name: TestInsight.test_insights_does_not_nplus1.9
  '
  SELECT "posthog_enterprisetaggeditem"."tag"
  FROM "posthog_enterprisetaggeditem"
  WHERE ("posthog_enterprisetaggeditem"."content_type_id" = 2
         AND "posthog_enterprisetaggeditem"."object_id" = '1')
  '
---